# docx-mcp-server

./: .gitignore  README.md  convert_icon.py  integration_test.py  pyproject.toml  requirements.txt  test_manager.py
src/docx_mcp_server/: docx_manager.py  server.py
